# autonomous-navigation

./: .gitignore  README.md  dict.md  frames.gv  map.yaml  rostopic.md  调试方法.md  调试自述.md
.catkin_tools/profiles/default/: devel_collisions.txt
FAST_LIO/: README_CN.md
my_map/: my_map.pgm
src/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO/config/: avia.yaml  horizon.yaml  ouster64.yaml  velodyne.yaml
src/FAST_LIO/launch/: mapping_velodyne.launch
src/StateMachine/: CMakeLists.txt  package.xml
src/StateMachine/scripts/: state_machine.py
src/beginner_tutorials/: package.xml
src/box_detection/: CMakeLists.txt  package.xml
src/box_detection/launch/: box_detection.launch
src/box_detection/maps/: global_costmap_with_boxes.yaml
src/box_detection/scripts/: 2d_box_detection.py  box_detection.py
src/bridge_detector/: CMakeLists.txt  README.md
src/bridge_detector/launch/: bridge_detector.launch  final.launch
src/bridge_detector/rviz/: bridge_viz.rviz
src/bridge_detector/scripts/: bridge_detector.py  bridge_detector_test.py
src/detection/: CMakeLists.txt  package.xml
src/detection/scripts/: boxes_detection.py  count_boxes.py  count_boxes_TesseractOCR  count_boxes_paddleOCR  count_boxes_speedup.py  count_boxes_speedup_0.5s.py  count_boxes_speedup_2.py  count_boxes_template_matching  count_track_boxes.py  fliter.py  ocr_only_node.py  test.py  yolo.py  yolov11.py
src/detection/src/: test.cpp
src/final_fsm/launch/: start.sh
src/frontier_explore/: CMakeLists.txt  README.md  package.xml
src/fsm/: CMakeLists.txt  README.md  package.xml
src/jackal_description/: README_CN.md
src/kk/: CMakeLists.txt  package.xml
src/nav_goal_forwarder/: CMakeLists.txt  package.xml
src/nav_goals/: CMakeLists.txt  package.xml
src/navigation/: CMakeLists.txt  README.md  package.xml
src/ocr/: CMakeLists.txt  package.xml
src/pcd_to_map/: CMakeLists.txt  package.xml
src/slam/: CMakeLists.txt  package.xml
src/slam/launch/: fast_lio.launch  fast_lio_2d.launch
src/state_machine/: CMakeLists.txt  package.xml
src/waypoint_navigation/: CMakeLists.txt  package.xml  untitled.yaml
src/waypoint_navigation/launch/: way.launch
src/waypoint_navigation/src/: waypoint_pub.cpp
(+91 files in other folders)
