<?xml version="1.0"?>
<package>
  <name>waypoint_navigation</name>
  <version>0.1.0</version>
  <description>The waypoint_navigation package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>detection_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>detection_msgs</run_depend>

  <export>
  </export>
</package>